# CreativeOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python-ci.yml  python.yml
ai/: __init__.py  exceptions.py  manager.py  mock.py  openai_provider.py  provider.py  registry.py
cli/: ai.py  campaign.py  index.py  main.py  repository.py  song.py
core/: config.py  discovery.py  project.py
creativeos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: DECISIONS.md  ENGINEERING.md  OPENAI_INTEGRATION.md  PRODUCT_BLUEPRINT.md  TECHNICAL_BACKLOG.md
docs/adr/: 0002-derived-repository-index.md  ADR-0001-layered-architecture.md
docs/specs/: COS-013-repository-index.md
examples/: creativeos.yaml
knowledge/: achievements.md  artist.md  biography.md  brand.md  media-kit.md  quotes.md
models/: campaign.py  config.py  content.py  doctor.py  index.py  song.py  workspace_summary.py
prompts/: README.md  content_calendar.md  facebook.md  instagram.md  playlist_pitch.md  press_release.md  radio_pitch.md  tiktok.md  x.md
renderers/: doctor.py  status.py
scaffolds/song/: structure.yaml
services/: campaign.py  campaign_generator.py  doctor.py  index.py  knowledge.py  prompt_template.py  repository.py  scaffold.py  song.py  workspace_summary.py
tests/: test_ai.py
tests/unit/: test_campaign_generator.py  test_campaign_service.py  test_cli_campaign.py  test_cli_repository_index.py  test_config.py  test_discovery.py  test_doctor.py  test_index_models.py  test_index_service.py  test_project.py  test_repository.py  test_scaffold.py  test_song.py
tests/unit/ai/: test_openai_provider.py
tests/unit/services/: test_knowledge.py  test_prompt_template.py
