[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "creativeos"
version = "0.1.0"
description = "Private creator productivity toolkit for Kelvin Rankie's music workflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "rich",
    "PyYAML",
]

[project.scripts]
creativeos = "cli.main:app"


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cli*",
    "core*",
    "models*",
    "services*",
    "renderers*",
    "plugins*",
    "integrations*",
]
exclude = [
    "tests*",
    "examples*",
]
