[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "creativeos"
version = "0.1.0"
description = "Repository-native automation platform for creative professionals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
    "PyYAML>=6.0,<7.0",
    "openai>=1.99.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
creativeos = "cli.main:app"

[project.urls]
Homepage = "https://github.com/kelvinrenkhoe/CreativeOS"
Repository = "https://github.com/kelvinrenkhoe/CreativeOS"
Issues = "https://github.com/kelvinrenkhoe/CreativeOS/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ai*",
    "cli*",
    "core*",
    "models*",
    "services*",
    "renderers*",
    "plugins*",
    "integrations*",
]
exclude = [
    "tests*",
    "examples*",
]
